# ChangeLog for sci-mathematics/why3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Sep 2014; Christoph Junghans <ottxor@gentoo.org> why3-0.83.ebuild:
  drop autotools.eclass

  21 Jun 2014; Jonathan-Christofer Demay <jcdemay@gmail.com>
  +ChangeLog, +metadata.xml, +why3-0.83.ebuild:
  initial version