@@ -1,8 +1,8 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="5"
+EAPI=5
 
 inherit eutils
 
@@ -23,28 +23,32 @@ DEPEND=">=dev-lang/ocaml-3.12.1
 		doc? ( dev-tex/rubber )"
 RDEPEND="${DEPEND}"
 
+DOCS=( CHANGES README Version )
+
 src_prepare() {
-	mv doc/why.1 doc/why3.1
-	sed -i configure.in -e "s/\"pvs\"/\"sri-pvs\"/g"
-	sed -i configure -e "s/\"pvs\"/\"sri-pvs\"/g"
+	mv doc/why.1 doc/why3.1 || die
+	sed -i configure.in -e "s/\"pvs\"/\"sri-pvs\"/g" || die
+	sed -i configure -e "s/\"pvs\"/\"sri-pvs\"/g" || die
 	sed -i Makefile.in -e "s:DESTDIR =::g" \
-		-e "s:\$(RUBBER) --warn all --pdf manual.tex:makeindex manual.tex; \$(RUBBER) --warn all --pdf manual.tex; cd ..:g"
+		-e "s:\$(RUBBER) --warn all --pdf manual.tex:makeindex manual.tex; \$(RUBBER) --warn all --pdf manual.tex; cd ..:g" || die
 }
 
 src_configure() {
-	econf $(use_enable frama-c) || die "econf failed"
+	econf $(use_enable frama-c)
 }
 
 src_compile() {
-	emake -j1 || die "emake failed"
+	MAKEOPTS+=" -j1"
+
+	emake
 	if use doc; then
-		emake -j1 doc/manual.pdf || die "emake doc failed"
+		emake doc/manual.pdf
 	fi
 }
 
 src_install(){
-	emake install DESTDIR="${D}" || die "emake install failed"
-	dodoc CHANGES README Version
+	default
+
 	doman doc/why3.1
 	if use doc; then
 		dodoc doc/manual.pdf
@@ -53,4 +57,4 @@ src_install(){
 		insinto /usr/share/doc/${PF}
 		doins -r examples
 	fi
-	}
+}
