@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/why3
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Feb 2015; Marius Brehler <marbre@linux.sungazer.de>
+  why3-0.83.ebuild:
+  Cleanup ebuild
 
   16 Sep 2014; Christoph Junghans <ottxor@gentoo.org> why3-0.83.ebuild:
   drop autotools.eclass
